--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-flow": "^7.0.0",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-clean-dist": "^0.0.6",
     "sass": "^1.23.3"
   },
   "scripts": {
-    "dev": "parcel index.html"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html --no-source-maps",
+    "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "uuid": "^3.3.3"
   }
 }
